# graspy-ai

./: .gitignore  FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  ecosystem.config.js  package-lock.json  package.json  turbo.json
apps/server/: .env.example  README.md  eslint.config.ts  main.py  package.json  pyproject.toml
apps/server/app/: __init__.py  dependencies.py  main.py  schemas.py  settings.py  strands_patches.py
apps/server/app/api/: routes.py
apps/server/app/services/: __init__.py  curriculum.py  lessons.py  strands.py  subjects.py  tutor.py  users.py
apps/server/app/workflows/: __init__.py  curriculum.py  lesson.py
apps/server/config/: .env.example
apps/server/src/: server.ts
apps/server/src/common/constants/: Paths.ts
apps/server/src/routes/: CurriculumRoutes.ts  index.ts
apps/server/src/services/: CurriculumService.ts  LessonService.ts
apps/server/tests/common/: Paths.ts
apps/web/: .dev.vars.example  .gitignore  CLOUDFLARE.md  next.config.ts  open-next.config.ts  package.json  wrangler.toml
apps/web/src/: i18n.ts  middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: AutoFlowShowcase.tsx  ChatPanel.tsx  CurriculumGenerator.tsx  CurriculumSetupCard.tsx  LanguageSwitcher.tsx  LearningSessionCard.tsx  (+5 more)
docs/: OVERVIEW.md  RUNBOOK.md
src/app/: layout.tsx
src/app/dashboard/: page.tsx
src/app/onboarding/: page.tsx
src/components/: SearchableSelect.tsx
src/lib/: i18n-context.tsx  locale-detector.ts  user-storage.ts
src/locales/: ar.json  en.json  yo.json
src/server/: api.ts
(+36 files in other folders)
