[project]
name = "py-server"
version = "0.1.0"
description = "Graspy FastAPI backend powered by AWS Strands agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "strands-agents>=1.12.0",
    "strands-agents-builder>=0.1.10",
    "strands-agents-tools>=0.2.12",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=3.0.2",
]
